--- a/style.css
+++ b/style.css
@@ -9,4 +9,18 @@ body{
     box-shadow: 0px 0px 70px 3px;
     margin-top: 100px;
     margin-bottom: 100px;
+    padding: 50px;
+}
+.cabecera{
+    height: 300px;
+    width: 100%;
+    border: 3px solid black;
+    padding: 10px;}
+.icono{
+
+    background-color: black;
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+    float: left;
 }
