--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body{
     background-color: rgb(238, 224, 224 );
 }
+.nombre_cv {
+    font-family: "Anton", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+  }
 .hoja_cv{
     height: 1920px;
     width: 1080px;
@@ -25,7 +31,6 @@ header {
     float: left;
 }
 
-
 .icono img {
     width: 100%; 
     height: 100%; 
@@ -37,13 +42,12 @@ header {
     width: 100%;
 }
 
-.parrafo_izquierdo{
-    height: 1596.2px;
-    width: 50%;
-    background-color: black;
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: pink;
 }
-.parrafo_derecho{
-    height: 1596.2px;
-    width: 50%;
-    background-color: GREY;
+.cuerpo{
+    height: 100%;
+    width: 100%;
 }
