--- a/style.css
+++ b/style.css
@@ -1,25 +1,22 @@
 body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background-color: rgb(238, 224, 224 );
 }
-.nombre_cv {
-    font-family: "Anton", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 24px;
-  }
+
 .hoja_cv{
     height: 1920px;
     width: 1080px;
     background-color: white;
-    margin: auto;
+    margin: 100px;
     box-shadow: 0px 0px 70px 3px;
     margin-top: 100px;
     margin-bottom: 100px;
     padding: 50px;
-}
-header {
-    background-color: pink;
-    height: 300px;
 }
 
 .icono {
@@ -38,16 +35,6 @@ header {
 }
 
 .esqueleto{
-    height: 100%;
-    width: 100%;
-}
-
-footer{
-    width: 100%;
-    height: 150px;
-    background-color: pink;
-}
-.cuerpo{
     height: 100%;
     width: 100%;
 }
