--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ footer{
 
 .div2 {
     display: flex;
-    background-color: white;
     height: 100%;
     width: 40%;
     flex-direction: column;  /* Apila los elementos verticalmente */
@@ -73,16 +72,21 @@ footer{
 }
 .div3 {
     display: flex;
-    background-color: grey;
     height: 100%;
     width: 30%;
     justify-content: center;
     flex-wrap: nowrap;
 }
 
+.texto_general {
+    font-family: "Barlow Condensed", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+
 /*Apartado para los dibujos del Header*/
 .cuadrado{
-    background-color: rgb(79, 105, 27);
+    background-color: black;
     align-items: center; 
     height: 70px;
     width: 100px;
@@ -92,5 +96,5 @@ footer{
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
-    border-top: 35px solid rgb(79, 105, 27);   /* Borde superior visible (triángulo hacia abajo) */
+    border-top: 35px solid black;   /* Borde superior visible (triángulo hacia abajo) */
 }
