--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     font-style: normal;
     font-size: 40px;
     margin: auto;
-  }
+}
 .hoja_cv{
     height: 1920px;
     width: 1080px;
@@ -25,6 +25,17 @@ header {
     height: 300px;
     display: flex; 
     align-items: center; 
+}
+
+.esqueleto{
+    height: 100%;
+    width: 100%;
+}
+
+.contenedor1 {
+    display: flex; 
+    align-items: center; 
+    border-top: solid black 3px;
 }
 
 .div1 {
@@ -42,27 +53,6 @@ header {
     width: 70%; 
     height: 70%; 
     object-fit: cover; /* Asegura que la imagen cubra todo el div sin distorsionarse, y recortará la imagen si es necesario */
-}
-
-.esqueleto{
-    height: 100%;
-    width: 100%;
-}
-
-footer{
-    width: 100%;
-    height: 150px;
-    background-color: pink;
-}
-.cuerpo{
-    height: 100%;
-    width: 100%;
-}
-
-.contenedor1 {
-    display: flex; 
-    align-items: center; 
-    border-top: solid black 3px;
 }
 
 .div2 {
@@ -90,7 +80,7 @@ footer{
 
 /*Apartado para los dibujos del Header*/
 .cuadrado{
-    background-color: black;
+    background-color: rgb(41, 79, 13);
     align-items: center; 
     height: 70px;
     width: 100px;
@@ -100,5 +90,5 @@ footer{
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
-    border-top: 35px solid black;   /* Borde superior visible (triángulo hacia abajo) */
+    border-top: 35px solid rgb(41, 79, 13);   /* Borde superior visible (triángulo hacia abajo) */
 }
