--- a/style.css
+++ b/style.css
@@ -4,13 +4,7 @@ body{
     background-position: center center; 
     background-attachment: fixed; 
 }
-.nombre_cv {
-    font-family: "Bona Nova SC", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 40px;
-    margin: auto;
-}
+
 .hoja_cv{
     height: 1920px;
     width: 1080px;
@@ -21,8 +15,9 @@ body{
     margin-bottom: 100px;
     padding: 50px;
 }
+
 header {
-    height: 300px;
+    height: 250px;
     display: flex; 
     align-items: center; 
 }
@@ -42,16 +37,15 @@ header {
     display: flex;
     height: 100%;
     width: 30%;
-    justify-content: center;    /* Centra horizontalmente */
-    align-items: center;        /* Centra verticalmente */
-    overflow: hidden; /* Asegura que la imagen no sobresalga del borde redondeado */
+    justify-content: center;
+    align-items: center; 
     float: left;
 }
 
 .div1 img {
     border-radius: 100%;
     width: 70%; 
-    height: 70%; 
+    height: 80%; 
     object-fit: cover; /* Asegura que la imagen cubra todo el div sin distorsionarse, y recortará la imagen si es necesario */
 }
 
@@ -71,14 +65,15 @@ header {
     flex-wrap: nowrap;
 }
 
+/*Apartado para las diferentes tipos de fuentes de texto del CV*/
 .texto_general {
     font-family: "Barlow Condensed", serif;
     font-weight: 500;
     font-style: normal;
     font-size: 20px;
-  }
+}
 
-/*Apartado para los dibujos del Header*/
+/*Apartado para los la forma del Header (FALTA INSERTAR UN DIBUJO EN MEDIO DEL CUADRADO)*/
 .cuadrado{
     background-color: rgb(41, 79, 13);
     align-items: center; 
@@ -90,5 +85,5 @@ header {
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
-    border-top: 35px solid rgb(41, 79, 13);   /* Borde superior visible (triángulo hacia abajo) */
+    border-top: 35px solid rgb(41, 79, 13);
 }
