--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ header {
     font-style: normal;
     font-size: 20px;
 }
+.texto_normal{
+    
+}
 
 /*Apartado para los la forma del Header*/
 .cuadrado{
