generado espacio entre las tablas

--- a/style.css
+++ b/style.css
@@ -123,3 +123,4 @@ footer{
     width: 100%;
     background-color: pink;
 }
+/*-------------------------------------------------- Apartado con todo el contenido para modificar la tabla ------------------------------------------------------------*/
